[package]
name = "bs"
version = "0.1.0"
edition = "2021"
authors = ["Graydon Hoare <graydon@pobox.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bitset", "bitvec", "set", "bit"]
repository = "https://github.com/graydon/bs"
description = "Simple bitset with small-set (single-word) optimization."
readme = "README.md"

[dependencies]
bit-set = "0.5.2"
bit-vec = "0.6.3"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
