[package]
name = "bs"
version = "0.3.0"
edition = "2021"
authors = ["Graydon Hoare <graydon@pobox.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bitset", "bitvec", "set", "bit"]
repository = "http://github.com/graydon/bs"
description = "Simple bitset with small-set (single-word) optimization."
readme = "README.md"

[dependencies]
bit-set = "0.5.3"
bit-vec = "0.6.3"
serde = { version = "1.0", features = ["derive"] , optional = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
serde = ["dep:serde", "bit-vec/serde"]